--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,15 @@
 \usepackage{xcolor}
 \usepackage[dvipdfmx]{graphicx}
 
+%% main header
+\tite{}
+\author{}
+\date{\today}
+%% 
+
+%%========= main document ============
 \begin{document}
+\maketitle
 
 %% sections 
 \input{sections/sec1.tex}
